# robust-qrc-molecular-prediction

./: Manifest.toml  Merck_boxplot.ipynb  Project.toml  README.md  crc_randforest_embedingonly.jl  main.py  pyproject.toml  qrc-dataprep.py  qrc_regression_merck.jl  qrc_regression_wavefunction_milan.jl  qrc_runalgos_alltypes.py  qrc_runalgos_alltypes_crc.py  qrc_runalgos_alltypes_noise.py
DATA/: X_test_200rec_sub10act4v3.csv  X_test_200rec_sub11act4v3.csv  X_test_200rec_sub12act4v3.csv  X_test_200rec_sub13act4v3.csv  X_test_200rec_sub14act4v3.csv  X_test_200rec_sub15act4v3.csv  X_test_200rec_sub16act4v3.csv  X_test_200rec_sub17act4v3.csv  X_test_200rec_sub18act4v3.csv  X_test_200rec_sub19act4v3.csv  X_test_200rec_sub1act4v3.csv  X_test_200rec_sub20act4v3.csv  X_test_200rec_sub21act4v3.csv  X_test_200rec_sub22act4v3.csv  X_test_200rec_sub23act4v3.csv  X_test_200rec_sub24act4v3.csv  X_test_200rec_sub25act4v3.csv  X_test_200rec_sub2act4v3.csv  X_test_200rec_sub3act4v3.csv  X_test_200rec_sub4act4v3.csv  X_test_200rec_sub5act4v3.csv  X_test_200rec_sub6act4v3.csv  X_test_200rec_sub7act4v3.csv  X_test_200rec_sub8act4v3.csv  X_test_200rec_sub9act4v3.csv  X_train_200rec_sub10act4v3.csv  X_train_200rec_sub11act4v3.csv  X_train_200rec_sub12act4v3.csv  X_train_200rec_sub13act4v3.csv  X_train_200rec_sub14act4v3.csv  X_train_200rec_sub15act4v3.csv  X_train_200rec_sub16act4v3.csv  X_train_200rec_sub17act4v3.csv  X_train_200rec_sub18act4v3.csv  X_train_200rec_sub19act4v3.csv  X_train_200rec_sub1act4v3.csv  X_train_200rec_sub20act4v3.csv  X_train_200rec_sub21act4v3.csv  (+69 more)
(+75 files in other folders)
