[project]
name = "qrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.2",
    "colorcet>=3.1.0",
    "datashader>=0.18.0",
    "holoviews>=1.20.2",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "umap>=0.1.1",
    "yellowbrick>=1.5",
]
